<resources>
    <string name="app_name">Relic</string>

    <string name="AUTH_PREF">auth</string>
    <string name="TOKEN_KEY">access_token</string>
    <string name="REFRESH_TOKEN_KEY">refresh_token</string>
    <string name="REDIRECT_CODE">code</string>

    <string name="app_author">u/boiledbuns</string>

    <!-- bottom navigation -->
    <string name="nav_subreddits">Subs</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_search">Search</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>

    <!-- search strings-->
    <string name="searchmenu_title">Search</string>
    <string name="sync_config_menu">sync settings</string>
    <string name="search_subreddit_hint">subreddit name</string>

    <!-- display subs menu -->
    <string name="refresh_subs">refresh</string>

    <!-- appbarlayout --> 
    <!--<string name="appbar_scrolling_view_behavior">android.support.</string>-->
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <!-- sorting titles -->
    <string name="sortby_title">sort by</string>
    <string name="sortby_best">best</string>
    <string name="sortby_controversial">controversial</string>
    <string name="sortby_hot">hot</string>
    <string name="sortby_new">new</string>
    <string name="sortby_random">random</string>
    <string name="sortby_rising">rising</string>
    <string name="sortby_top">top</string>

    <string name="sort_scope_hour">hour</string>
    <string name="sort_scope_day">day</string>
    <string name="sort_scope_week">week</string>
    <string name="sort_scope_month">month</string>
    <string name="sort_scope_year">year</string>
    <string name="sort_scope_all">all</string>

    <string name="sort_by_info">sorting by %s for %s</string>
    <string name="sort_by_info_no_scope">sorting by %s</string>

    <string name="nsfw">NSFW</string>
    <string name="spoiler">spoiler</string>
    <string name="reply">reply</string>
    <string name="comments">comments</string>
    <string name="load_comments">load %d more comments…</string>
    <string name="empty_parent_body">This post has no text body</string>

    <string name="subscribers">Size</string>

    <string name="subscribe">subscribe</string>
    <string name="subscribed">subscribed</string>

    <string name="pin"> pin </string>

    <string name="author">r/%s</string>

    <string name="sub_prefix_name">r/%s</string>
    <string name="sub_prefix_label">r/%s</string>
    <string name="user_prefix_label">u/%s</string>
    <string name="subscriber_count">%d subscribers</string>
    <string name="fav_subs_count">Favourites (%d)</string>
    <string name="user_and_time">u/%s - %s</string>
    <string name="reply_count">%d replies</string>
    <string name="comment_count">%d comments</string>
    <string name="comment_score">%d points</string>
    <string name="post_age">%s ago</string>

    <!-- tool strings -->
    <string name="placeholder_text">placeholder_text</string>
    <string name="short_placeholder_text">flair</string>
    <string name="long_placeholder_text">
        Hey this is a long place holder string meant to be used by the tools
        attribute in the xml to display long text. Look at how great it looks!
    </string>



    <!-- display post error strings -->
    <string name="network_unavailable">Network unavailable</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="no_comments">Doesn\'t look like anything\'s here</string>
    <string name="retry">retry</string>
    <string name="refresh">refresh</string>

    <!-- navigation menu -->
    <string name="preferences">preferences</string>
    <string name="search_subs">search subreddits</string>
    <string name="search_users">search users</string>

    <!-- preferences menu -->
    <string name="preference_theme">Theme Editor</string>
    <string name="preference_post_layout">Post Layout Editor</string>

    <string name="preference_theme_title">This is the theme selection screen</string>
    <string name="preference_theme_instruction">Select a theme for a preview of what it\'ll look like in the app</string>

    <!-- user profile -->
    <string name="link_karma">link</string>
    <string name="comment_karma">comment</string>
    <string name="total_karma">total karma</string>
    <string name="account_age">created %s (%s)</string>
    <string name="placeholder_link_karma">link %d</string>
    <string name="placeholder_comment_karma">comment %d</string>

    <!-- image loading -->
    <string name="loading">loading %s</string>
    <string name="loading_error">failed to load %s</string>

    <string-array name="theme_names">
        <item>Dark</item>
        <item>Light</item>
    </string-array>

    <string-array name="post_layout_options">
        <item>Span</item>
        <item>Card</item>
    </string-array>

    <string name="log_in">log in</string>
    <string name="add_account">add account</string>
    <string name="switched_account">switched account to %s</string>

    <string name="search_sub">enter search</string>
    <string name="search">search</string>
    <string name="search_sub_result_count">%d results loaded</string>
    <string name="create_post">create post</string>
    <string name="submit_post">submit post</string>
    <string name="save_draft">save draft</string>

    <string name="online_search_results">All subreddits</string>
    <string name="local_search_results">Local subreddits</string>
    <string name="user_search_result">User u/%s not found</string>

    <string name="sub_search_results_size">%d results</string>
    <string name="user_search_results_size">%d results</string>

    <string name="no_posts">No posts loaded</string>
    <string name="tag_banner">banner</string>

    <string name="change_layout">change layout</string>


    <string name="sync_time">repeats</string>
    <string name="sync_posts">Number of pages to sync</string>
    <string name="sync_comments">Number of comments to sync</string>

    <string name="sync_sub_title">Sync posts for %s</string>
    <string name="sync_comments_title">sync comments</string>
    <string name="icon_content_description">icon</string>
    <string name="login">login</string>
    <string name="login_info">You\'re currently not signed in!</string>
    <string name="source_frontpage">Frontpage</string>
    <string name="source_all">All</string>
    <string name="source_popular">Popular</string>

    <string name="all_subscriptions">All Subscriptions</string>
    <string name="pinned_subs">Pinned Subreddits</string>

    <!-- welcome dialog -->
    <string name="welcome_dialog_title">Welcome to Relic</string>
    <string name="welcome_dialog_body">Relic is still under development and only supports logged in users for now :)</string>
    <string name="welcome_dialog_login">Login</string>
    <string name="search_direct_navigation">Navigate directly to</string>

</resources>
