<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/display_user_sort"
          android:title="@string/sortby_title"
          android:icon="@drawable/ic_sort"
          app:showAsAction="ifRoom|collapseActionView">

        <menu>
            <item android:id="@+id/user_sort_new" android:title="@string/sortby_new" app:showAsAction="withText"/>
            <!-- has submenu -->
            <item android:id="@+id/user_sort_hot" android:title="@string/sortby_hot" app:showAsAction="withText"><menu/></item>
            <item android:id="@+id/user_sort_top" android:title="@string/sortby_top" app:showAsAction="withText"><menu/></item>
            <!-- end of has submenu -->
            <item android:id="@+id/user_sort_controversial" android:title="@string/sortby_controversial" app:showAsAction="withText"/>
        </menu>

    </item>

</menu>