<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundSecondary"
    android:padding="@dimen/padding_m">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/subNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_xs"
                android:layout_marginStart="@dimen/padding_s"
                android:textSize="@dimen/title_text_l"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/subCountView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subNameView"
                android:layout_marginStart="@dimen/padding_s"
                android:layout_marginBottom="@dimen/padding_m"
                android:textSize="@dimen/title_text_m"/>

            <Button
                android:id="@+id/subscribeButtonView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subCountView"
                android:text="@string/subscribe"/>

            <Button
                android:id="@+id/pinButtonView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subCountView"
                android:layout_toEndOf="@id/subscribeButtonView"
                android:text="@string/pin"/>

            <TextView
                android:id="@+id/subDescriptionView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pinButtonView"
                android:layout_marginTop="@dimen/padding_m"
                android:textSize="@dimen/text_m"/>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>