<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/padding_l"
    android:paddingEnd="@dimen/padding_l"
    android:background="@color/backgroundSecondary">

    <!-- link karma box -->
    <LinearLayout
        android:id="@+id/userPreviewTotalContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/userPreviewLinkContainer">

        <TextView
            android:text="@string/total_karma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/userPreviewTotalKarma"
            tools:text="900"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_text_xl"/>

    </LinearLayout>

    <!-- link karma box -->
    <LinearLayout
        android:id="@+id/userPreviewLinkContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/userPreviewTotalContainer"
        app:layout_constraintEnd_toStartOf="@id/userPreviewCommentContainer">

        <TextView
            android:text="@string/link_karma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/userPreviewLinkKarma"
            tools:text="900"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_text_xl"/>

    </LinearLayout>

    <!-- comment karma box -->
    <LinearLayout
        android:id="@+id/userPreviewCommentContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/userPreviewLinkContainer"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:text="@string/comment_karma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/userPreviewCommentKarma"
            tools:text="100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_text_xl"/>

    </LinearLayout>

    <android.support.constraint.Barrier
        android:id="@+id/userPreviewKarmaContainerBarrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="userPreviewTotalContainer"
        app:barrierDirection="bottom"/>

    <TextView
        android:id="@+id/userPreviewCreated"
        tools:text="created 10 years ago (Feb 11th, 2009)"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/padding_m"
        app:layout_constraintTop_toBottomOf="@id/userPreviewLinkContainer"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
